Fixed S3 bucket and MySQL hostname in ConfigMap

--- a/manifests/flask-deployment.yaml
+++ b/manifests/flask-deployment.yaml
@@ -23,7 +23,7 @@ spec:
             - containerPort: 81
           envFrom:
             - secretRef:
-                name: flask-secrets
+                name: k8-ecrets
             - configMapRef:
                 name: flask-config
           volumeMounts:
